# Compiler

./: CFG.txt  CMakeLists.txt  DFAbuilder.h  DFAbuiler.h  Main.cpp  NFAbuilder.cpp  NFAbuilder.h  NFAbuiler.h  NFAparser.h  first_table.txt  follow_table.txt  input.txt  lexical_analyzer.h  output.txt  parse_table.txt  parser.h  parser_output.txt  printer.cpp  printer.h  table.txt  test.txt
DFA/: DFAbuilder.cpp  DFAbuilder.h
DFAminimizer/: DFAminimizer.cpp  DFAminimizer.h
NFA/: NFAbuilder.cpp  NFAbuilder.h  NFAparser.cpp  NFAparser.h  graph.cpp  graph.h
intialize/: initialization.cpp  initialization.h
parser/: parser.cpp  parser.h  regex_parser.h
phase2/: outputGenerator.cpp  outputGenerator.h  tableBuilder.cpp  tableBuilder.h
printer_phase1/: printer.cpp  printer.h
printer_phase2/: parser_interface.cpp  parser_interface.h  printer.cpp  printer.h
